--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+
+ul {
+  list-style: none;
+}
+li {
+  list-style: none;
+  display: inline;
+  background-color: cornflowerblue;
+  padding: 10px;
+  border-radius: 5%;
+  color: white;
+  font-size: 16px;
+}
